# solvix-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  WARP.md  ai_integration.md  ai_logic.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/api/: errors.py  middleware.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routes/: classify.py  gates.py  generate.py  health.py
src/config/: settings.py
src/engine/: __init__.py  classifier.py  gate_evaluator.py  generator.py
src/guardrails/: contextual.py  entity.py  pipeline.py  temporal.py
src/llm/: __init__.py  base.py  client.py  factory.py  gemini_provider.py  openai_provider.py  prompts.py  schemas.py
src/prompts/: __init__.py  classification.py  draft_generation.py  gate_evaluation.py
src/utils/: __init__.py  json_extractor.py  metrics.py
tests/: __init__.py  conftest.py  test_api.py  test_classifier.py  test_gate_evaluator.py  test_generator.py  test_guardrail_severities.py  test_live_integration.py  test_llm_client.py  test_provider_metadata.py
tests/test_guardrails/: test_pipeline.py
